k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: footballhub-backend
  namespace: footballhub-dev

spec:
  replicas: 3

  selector:
    matchLabels:
      app: footballhub-backend

  template:
    metadata:
      labels:
        app: footballhub-backend

    spec:
      containers:
        - name: footballhub-backend
          image: footballhub-backend:v5
          imagePullPolicy: IfNotPresent
          
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
