k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: footballhub-backend
  namespace: footballhub-dev

spec:
  selector:
    app: footballhub-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
