k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: footballhub-ingress
  namespace: footballhub-dev

spec:
  rules:
    - host: footballhub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: footballhub-backend
                port:
                  number: 8000
